//
//
// Tencent is pleased to support the open source community by making tRPC available.
//
// Copyright (C) 2023 Tencent.
// All rights reserved.
//
// If you have downloaded a copy of the tRPC source code from Tencent,
// please note that tRPC source code is licensed under the  Apache 2.0 License,
// A copy of the Apache 2.0 License is included in this file.
//
//

syntax = "proto3";

package trpc.testing.common;

service TestCommon {
  // Used to test scenarios with different configuration services simultaneously.
  // Services can be dynamically started to save ports used for testing.
  rpc StartService (ServiceInfo) returns (CommonRet) {}
  rpc StopService (ServiceInfo) returns (CommonRet) {}
}

message ServiceInfo {
  string service_name = 1;
}

message CommonRet {
  string status = 1;
}
